@@ -13,8 +13,8 @@ use Drupal\slick\SlickDefault;
  */
 function slick_theme() {
   $themes = [];
-  $all = ['slick', 'slide', 'grid', 'thumbnail', 'vanilla', 'wrapper'];
-  foreach ($all as $item) {
+  $items = ['slick', 'slide', 'grid', 'thumbnail', 'vanilla', 'wrapper'];
+  foreach ($items as $item) {
     $key = $item == 'slick' ? $item : 'slick_' . $item;
     $themes[$key] = [
       'render element' => 'element',
