@@ -1,4 +1,8 @@
 
+Slick 8.x-2.0-dev, 2019-01-04
+-----------------------------
+- Updated README.txt, and minor adjustments.
+
 Slick 8.x-2.0-dev, 2019-01-01
 -----------------------------
 - Added a new dedicated Media integration via SlickMediaFormatterBase.
